exchenge instagram nik

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </a>
                 </li>
                 <li class="wow bounceInLeft">
-                    <a href="https://www.instagram.com/bobur_tawkenskiy/" target="_blank">
+                    <a href="https://www.instagram.com/bobur_anvarov/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </li>
